--- a/index.html
+++ b/index.html
@@ -25,12 +25,7 @@ button#copy {
   width: 100vw;
   height: 100vh;
 }
-/* custom focus effect (outline would be cropped) */
-button#copy:active,
-button#copy:focus {
-  outline:0;
-  border-color:#3a3939;
-}</style>
+</style>
 </style>
 </head>
 <body>
